Changelog
=========

0.2.0 -
-------------------

- Add support for "editing" a chat, allowing for changing system prompt and template.
  [ggozad]

- Update textual and remove our own monkey patching
  for Markdown. Increase Markdown size from 20 lines to 50.
  [ggozad]

0.1.22 - 2024-02-01 
-------------------

- Cancel inference when the user presses ESC.
  [ggozad]

- Speed up initial loading of the app by mounting past messages lazily
  only when a chat pane is viewed.
  [ggozad]

0.1.21 - 2024-01-24
-------------------

- Allow changing the root of the filesystem tree when selecting an image.
  [ggozad]

- Minor bug fixes.
  [ggozad]

0.1.20 - 2024-01-12
-------------------

- Minor bug fixes.
  [ggozad]

0.1.19 - 2024-01-11
-------------------

- Introduce AppConfig saved to json file. Save theme setting for the time being.
  [ggozad]

- Fix TextArea and Markdown widgets to work with light theme.
  [ggozad]

0.1.18 - 2024-01-05
-------------------

- Bug fixes.
  [ggozad]

0.1.17 - 2023-12-19
-------------------

- Support multimodal models, allow adding images to chat messages.
  [ggozad]

- Change key bindings so that they can be invoked without loosing prompt focus.
  [ggozad]

- Add key binding to switch to multiline input using ctrl+n.
  [ggozad]

0.1.16 - 2023-12-07
-------------------

- Support markdown in chat messages.
  [ggozad]

- Show db location with when running with `--db`.
  [ggozad]

0.1.15 - 2023-12-07
-------------------

- Fix crash on renaming a chat.
  [ggozad]

0.1.14 - 2023-12-06
-------------------

- Automate pypi releases through github actions.
  [ggozad]

- Minor bug fixes.
  [ggozad]

0.1.13 - 2023-12-04
-------------------

- Forgotten db upgrade.
  [ggozad]

0.1.11 - 2023-11-29
-------------------

- Syntax highlighting for json responses.
  [ggozad]

- Support for `format` parameter in Ollama (essentially json for the time being).
  [ggozad]

0.1.10 - 2023-11-14
-------------------

- Prompt widget improvements.
  [ggozad]
